ToyPuller! And shopping-list demo!
(Changes feed isn't working right yet, though.)

--- a/Demo/ShoppingDemo-Info.plist
+++ b/Demo/ShoppingDemo-Info.plist
@@ -27,6 +27,6 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>SyncDatabaseURL</key>
-	<string></string>
+	<string>http://localhost:5984/demo-shopping</string>
 </dict>
 </plist>
