--- a/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
+++ b/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
@@ -60,6 +60,14 @@
             argument = "-Log YES"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-LogToyProtocol YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-LogSync YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
