More use of ToyRev in ToyDB. Fixed PUT in ToyRouter.

--- a/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
+++ b/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
@@ -68,6 +68,10 @@
             argument = "-LogSync YES"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "Test_All"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
