Checkpoint: Working on revision tree
I think it's all coded, and tests pass, but haven't tried replication yet.

--- a/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
+++ b/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
@@ -61,12 +61,12 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-LogToyProtocol YES"
+            argument = "-LogSync YES"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-LogSync YES"
-            isEnabled = "YES">
+            argument = "-LogToyProtocol YES"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
