Creating and indexing views!

--- a/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
+++ b/ToyCouch.xcodeproj/xcshareddata/xcschemes/ToyCouch Demo.xcscheme
@@ -61,6 +61,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-LogView YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-LogSync YES"
             isEnabled = "YES">
          </CommandLineArgument>
