The Great Renaming
ToyCouch --> TouchDB
"Toy" prefix --> "TD"

--- a/Source/TouchDB-Info.plist
+++ b/Source/TouchDB-Info.plist
@@ -6,27 +6,25 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>com.couchbase.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
-	<string>APPL</string>
+	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>DemoDatabase</key>
-	<string>demo-shopping</string>
-	<key>LSMinimumSystemVersion</key>
-	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
-	<key>NSMainNibFile</key>
-	<string>ShoppingDemo</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2011 Couchbase, Inc. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
-	<key>SyncDatabaseURL</key>
-	<string>http://127.0.0.1:5984/demo-shopping</string>
+	<string></string>
 </dict>
 </plist>
