--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Empty App.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Empty App.xcscheme
@@ -14,7 +14,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "27731F131495CFEF00815D67"
-               BuildableName = "TouchDB Demo.app"
+               BuildableName = "TouchDB Empty App.app"
                BlueprintName = "iOS Empty App"
                ReferencedContainer = "container:TouchDB.xcodeproj">
             </BuildableReference>
@@ -32,7 +32,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "27731F131495CFEF00815D67"
-            BuildableName = "TouchDB Demo.app"
+            BuildableName = "TouchDB Empty App.app"
             BlueprintName = "iOS Empty App"
             ReferencedContainer = "container:TouchDB.xcodeproj">
          </BuildableReference>
@@ -50,7 +50,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "27731F131495CFEF00815D67"
-            BuildableName = "TouchDB Demo.app"
+            BuildableName = "TouchDB Empty App.app"
             BlueprintName = "iOS Empty App"
             ReferencedContainer = "container:TouchDB.xcodeproj">
          </BuildableReference>
@@ -78,7 +78,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "27731F131495CFEF00815D67"
-            BuildableName = "TouchDB Demo.app"
+            BuildableName = "TouchDB Empty App.app"
             BlueprintName = "iOS Empty App"
             ReferencedContainer = "container:TouchDB.xcodeproj">
          </BuildableReference>
