--- a/iOS Empty App-Info.plist
+++ b/iOS Empty App-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>com.couchbase.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.couchone.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
