More replication work. It's working in the iOS demo now!
* Persistent storage of last sequence number pulled/pushed.
* HTTP _replicate endpoint supported.
* Fixed bugs in replicator code.
* Pusher ignores local changes pulled from the same remote database.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Demo.xcscheme
@@ -66,10 +66,24 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogTDURLProtocol YES"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-LogSync YES"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
