Mac demo now has UI for configuring sync URL.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -74,7 +74,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
