TDPuller now uses async GETs from the remote db.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -69,6 +69,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-LogSyncVerbose YES"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-LogToyProtocol YES"
             isEnabled = "NO">
          </CommandLineArgument>
