Replicator progress notification
* TDReplicator tracks progress.
* Support for CouchDB _active_tasks API.
* NSNotification posted when replicator progress changes.
* Demo apps use the notification instead of polling.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -62,7 +62,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogView YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSync YES"
