Checkpoint: More attachment work

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -78,7 +78,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
