--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/fmdb"]
 	path = vendor/fmdb
-	url = git://github.com/ccgus/fmdb.git
+	url = git://github.com/couchbaselabs/fmdb.git
