Added optional HTTP server
There's a new target that builds a "TouchDBListener" framework.
This framework implements a basic HTTP server on top of TouchDB.
The Mac demo app uses it and starts up the server on port 8888 at launch.

Easter egg: If you add a parameter "pretty=true" to the URLs given to this server, it'll pretty-print the JSON response. I also made it always do this in debug builds.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -61,12 +61,16 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-LogTDDatabase YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-LogView YES"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSync YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSyncVerbose YES"
@@ -78,7 +82,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
