--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/fmdb"]
 	path = vendor/fmdb
 	url = git://github.com/couchbaselabs/fmdb.git
+[submodule "vendor/CocoaHTTPServer"]
+	path = vendor/CocoaHTTPServer
+	url = git://github.com/robbiehanson/CocoaHTTPServer.git
