Now passes CouchDB "basics.js" tests
Lots and lots of little fixes and compatibility tweaks.
I did have to comment out a few lines in the tests that required exact error message strings.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -61,8 +61,12 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-LogTDDatabase YES"
+            argument = "-LogTDListener YES"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-LogTDDatabase YES"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogView YES"
