added iOS library target for TouchDBListner

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -70,7 +70,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogView YES"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSync YES"
