Implemented createTarget option on TDPusher.
Also improved the replicator tests. They now first push to a local CouchDB, then pull from that to a different TouchDB. This avoids dependencies on external services and hand-created test databases.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -94,6 +94,16 @@
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
