Fixed release link errors & memory leaks.
* Fixed link errors in release builds of the listener and Mac demo app.
* Fixed a memory leak in TDReplicator.
* Fixed a memory leak in the HTTP listener.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -90,18 +90,13 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
          <AdditionalOption
             key = "MallocScribble"
             value = ""
-            isEnabled = "YES">
-         </AdditionalOption>
-         <AdditionalOption
-            key = "NSZombieEnabled"
-            value = "YES"
             isEnabled = "YES">
          </AdditionalOption>
       </AdditionalOptions>
