Streaming attachment downloads during replication
Optimized downloading large attachments during a pull.
The document is fetched in multipart format, in which attachments are sent as raw MIME bodies without base64 encoding.
Each attachment is streamed directly to disk without being buffered in memory.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -90,10 +90,18 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogRemoteRequest YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "Test_TDRemoteMultipartRequest"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "Test_Only"
             isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
