Support for encoded (gzipped) attachments
This includes a schema change. Existing databases will be upgraded.
iOS apps will need to link against libz.dylib.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -94,7 +94,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_TDRemoteMultipartRequest"
