Streaming multipart attachment uploads
TDPusher now sends revisions with large attachments as separate PUTs using MIME multipart encoding. This makes the data size smaller (no base64) and saves memory by allowing the attachment to be streamed directly from disk without buffering it all in RAM.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -90,14 +90,14 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogRemoteRequest YES"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "Test_All"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "Test_TDRemoteMultipartRequest"
+            argument = "Test_TDMultipartStreamer"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
