Fixed the URL of the MYUtilities submodule.
If you have an existing checkout of TouchDB, you may have to change the value of the [submodule "vendor/MYUtilities"] config property, e.g. by editing .git/config, for this change to take effect.

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = git://github.com/robbiehanson/CocoaHTTPServer.git
 [submodule "vendor/MYUtilities"]
 	path = vendor/MYUtilities
-	url = git@github.com:snej/MYUtilities.git
+	url = git://github.com/snej/MYUtilities.git
