Fix a leak and appease the static analyzer

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Demo.xcscheme
@@ -43,7 +43,8 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.GDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
+      ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable>
