Speculative fix for replication issue with dup attachments
If a doc has two attachments with identical contents, TDMultipartDownloader will think there are fewer attachments than there really are (because it keys them by SHA-1 digest). This isn't a problem except for a sanity-check that was too strict. Loosened it up.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/iOS Demo.xcscheme
@@ -62,6 +62,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "Test_Only"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-Log YES"
             isEnabled = "YES">
          </CommandLineArgument>
