Use NSOperationQueue to single-thread access to TDServer/Database.
We no longer run everything on the NSURLConnection thread. Instead the TDServer creates an NSOperationQueue and everything else that talks to the server or its database does so via blocks posted to the queue.
This required changing a bunch of code (URL loading, stream, delayed perform) that depended on runloops to use operation or dispatch queues instead.

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -79,11 +79,11 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSync YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSyncVerbose YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogChangeTracker YES"
@@ -94,11 +94,15 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-LogTDMultiStreamWriter YES"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "Test_All"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "Test_TDReachability"
+            argument = "Test_TDMultiStreamWriter"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
