Revert "Use NSOperationQueue to single-thread access to TDServer/Database."
This reverts commit d111a9ff03cf30a833916ba5f1d058a0b07532db.

Conflicts:

	Listener/TDHTTPResponse.m
	Source/ChangeTracker/TDChangeTracker.m
	Source/ChangeTracker/TDRemoteRequest.m
	Source/TDURLProtocol.m

--- a/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
+++ b/TouchDB.xcodeproj/xcshareddata/xcschemes/Mac Demo.xcscheme
@@ -79,11 +79,11 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSync YES"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSyncVerbose YES"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogChangeTracker YES"
@@ -94,15 +94,11 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-LogTDMultiStreamWriter YES"
-            isEnabled = "NO">
-         </CommandLineArgument>
-         <CommandLineArgument
             argument = "Test_All"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "Test_TDMultiStreamWriter"
+            argument = "Test_TDReachability"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
