--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vendor/JSON-Schema-Test-Suite"]
 	path = vendor/JSON-Schema-Test-Suite
 	url = git://github.com/json-schema/JSON-Schema-Test-Suite.git
+[submodule "vendor/sqlite3-unicodesn"]
+	path = vendor/sqlite3-unicodesn
+	url = git://github.com/snej/sqlite3-unicodesn.git
