--- a/LiteServ App/LiteServ App-Info.plist
+++ b/LiteServ App/LiteServ App-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>LiteServ.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.couchbase.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.couchbase.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
