Added WebSockets-Cocoa library as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/sqlite3-unicodesn"]
 	path = vendor/sqlite3-unicodesn
 	url = git://github.com/snej/sqlite3-unicodesn.git
+[submodule "vendor/WebSockets-Cocoa"]
+	path = vendor/WebSockets-Cocoa
+	url = git://github.com/couchbaselabs/WebSockets-Cocoa.git
