[vendor] use forked oauthconsumer

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = git://github.com/snej/MYUtilities.git
 [submodule "vendor/oauthconsumer"]
 	path = vendor/oauthconsumer
-	url = git://github.com/couchbaselabs/ios-oauthconsumer.git
+url=https://github.com/leonid-s-usov/ios-oauthconsumer.git
 [submodule "vendor/JSON-Schema-Test-Suite"]
 	path = vendor/JSON-Schema-Test-Suite
 	url = git://github.com/json-schema/JSON-Schema-Test-Suite.git
