Overhauled project/build versioning.
* Existing CURRENT_PROJECT_VERSION setting is used as the "serial
  number" of the build. This will be set only by the automated build
  environment (not checked into the project.)
* A custom build setting CBL_VERSION_STRING defines the "marketing
  version number", e.g. "1.0" or "1.1 beta 3". This is checked into
  the project but will be overridden by the automated builds.
* An optional custom build setting CBL_SOURCE_REVISION contains the Git
  revision ID of the source code. This is only set by automated builds.
* The result of CBLVersionString() is generated from the project version
  and version string.
* The HTTP User-Agent header sent by the replicator is generated from
  the version string and OS/platform name (Mac OS X or iOS.)
* All three versions are logged at startup time using Log().

--- a/Source/CouchbaseLite-Info.plist
+++ b/Source/CouchbaseLite-Info.plist
@@ -17,13 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>${CURRENT_PROJECT_VERSION}</string>
+	<string>${CBL_VERSION_STRING}</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>${CURRENT_PROJECT_VERSION}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012-2013 Couchbase, Inc. All rights reserved.</string>
+	<string>Copyright © 2012-2014 Couchbase, Inc. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
