--- a/Source/CouchbaseLite-Info.plist
+++ b/Source/CouchbaseLite-Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>${CBL_VERSION_STRING}</string>
+	<string>${CBL_VERSION_STRING} (${CURRENT_PROJECT_VERSION})</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
