Updated submodule URLs for cbforest, forestdb
Need to use https: scheme because "git@..." doesn't work for non-public
repositories.

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = git://github.com/couchbaselabs/WebSockets-Cocoa.git
 [submodule "vendor/CBForest"]
 	path = vendor/CBForest
-	url = git://github.com/couchbaselabs/cbforest.git
+	url = https://github.com/couchbaselabs/cbforest.git
