--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Listener iOS.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Listener iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0600"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "27B0B7E61492BB6B00A817AD"
-               BuildableName = "CouchbaseLite.framework"
-               BlueprintName = "CBL iOS"
+               BlueprintIdentifier = "DA147C1F14BCAC3B0052DA4D"
+               BuildableName = "CouchbaseLiteListener.framework"
+               BlueprintName = "CBL Listener iOS"
                ReferencedContainer = "container:CouchbaseLite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,15 +29,6 @@
       buildConfiguration = "Debug">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "27B0B7E61492BB6B00A817AD"
-            BuildableName = "CouchbaseLite.framework"
-            BlueprintName = "CBL iOS"
-            ReferencedContainer = "container:CouchbaseLite.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
@@ -51,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "27B0B7E61492BB6B00A817AD"
-            BuildableName = "CouchbaseLite.framework"
-            BlueprintName = "CBL iOS"
+            BlueprintIdentifier = "DA147C1F14BCAC3B0052DA4D"
+            BuildableName = "CouchbaseLiteListener.framework"
+            BlueprintName = "CBL Listener iOS"
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -69,9 +60,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "27B0B7E61492BB6B00A817AD"
-            BuildableName = "CouchbaseLite.framework"
-            BlueprintName = "CBL iOS"
+            BlueprintIdentifier = "DA147C1F14BCAC3B0052DA4D"
+            BuildableName = "CouchbaseLiteListener.framework"
+            BlueprintName = "CBL Listener iOS"
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
